--- a/src/Componentes/Menu/Menu.css
+++ b/src/Componentes/Menu/Menu.css
@@ -1,46 +1,59 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Times New Roman', Times, serif;
-    color: black;
-   }
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
 
-  
-  li {
-    list-style: none;
-     text-decoration: none;
-      color: inherit;
-      margin: 2px;
-  }
-     
+textarea {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.container-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+  width: 100%;
+  background-image: url(../../assets/textura.png);
+}
+
+.menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 250px;
+  height: 300px;
+  float: left;
+  padding: 5rem;
+  padding-bottom: 1rem;
+}
+
+.div-logo{
+  width: 30%;
+}
+
+.div-menu {
+  width: 70%;
+  float: right;
+}
 
 .item {
   float: left;
+  padding-top: 2.2rem;
+  padding: 0;
 }
 
 .item .link {
-  font-size: 1.3em;
+  font-size: 1.5rem;
   font-weight: 600;
-  display: block;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   color: #043a5d;
 }
 
-  
-  .menu {
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-    z-index: 99; 
-    width: 100%;
-    height: 65px;
-    padding: 5px;
-    background-image: url(../../assets/textura.png);
-  }
-  
-  body, input, button, textarea{
-    font: 600 18px Nunito, sans-serif;
-    margin: 0;
-    box-sizing: border-box;
-  }
