--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -1,20 +1,11 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    font-family: 'Times New Roman', Times, serif;
-}
-
 .texto_inicio {
     font-size: 20px;
-    border: 4px solid hsl(270, 2%, 23%);
+    border: 3px solid rgba(3, 8, 48, 0.734);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.486);
     padding: 36px;
     line-height: 35px;
     margin: 48px;
-    
-    opacity: 0.9;
-    color:black;
+    background-color: blanchedalmond;
 }
 
 .foto_inicio {
@@ -24,15 +15,14 @@
 
 .imagem1 {
     width: 50%;
-    position:relative;
-    left: 280px;
     padding-top: 20px;
 }
-
 .imagem2 {
     position:relative;
-    left: 250px;
 }
 
+.section_inicio {
+    text-align: center;
+}
 
   
