--- a/src/pages/Sobre/Sobre.css
+++ b/src/pages/Sobre/Sobre.css
@@ -1,25 +1,55 @@
-main {
+.minibio {
     display: flex;
+    margin: 0 auto;
+    border: 1px solid rgba(3, 8, 48, 0.734);
+    padding: 20px;
+    line-height: 20px;
+    margin: 50px;
+    background-color: antiquewhite;
+    box-shadow: 0px 5px 5px #00000057;
 }
 
-.sobre {
-    width: 60%;
+.minibio_img {
+    width: 170px;
+    height: 155px;
+    border: 16px;
+    margin-right: 30px;
+}
+
+.imagem-ayane {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.minibio p {
+    width: 100%;
+    font-size: 20px;
+    color: #043a5d;
+    line-height: 30px;
+    text-align: justify;
 }
 
 .card-contato {
-    display: flex;
-    margin: 100px;
-    padding: 50px;
-    justify-content: space-between;
+  margin-top: 100px;
+   margin-bottom: 50px;
+   display: flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
 
 }
 
 .contato {
-    margin: 0px;
-    padding: 10px;
-    text-align:center;
-    width: 150px;
-    height: 150px;
-    border:solid 1px;
-    border-radius:0px 20px 0px 20px;
+    background-color:blanchedalmond;
+    width: 140px;
+    height: 110px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
 }
+
+.card-contato p{
+    text-align: center;
+}
+
